fix navbar wrapping

--- a/SalonML/SalonML/src/app/core/navbar/navbar.component.css
+++ b/SalonML/SalonML/src/app/core/navbar/navbar.component.css
@@ -4,4 +4,5 @@ a.logo img {
 
 .navbar {
     padding: 0 1rem;
+    flex-wrap: nowrap;
 }
